# libinterp

./: ChangeLog  Makefile.am  NEWS  README  configure.ac
doc/: Makefile.am  example2d.c  example2d_grid.c  example3d.c
src/: Makefile.am  interpolation.h  interpolators.c
